[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Fight1.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Fight1.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/healthbar_border.png" type="Texture" id=4]
[ext_resource path="res://UI/healthbar.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="SceneSwitcher" type="Node"]
script = ExtResource( 6 )

[node name="CurrentScene" type="Node2D" parent="." instance=ExtResource( 3 )]
script = ExtResource( 2 )

[node name="GUI" type="Control" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="PlayerHealth" type="TextureProgress" parent="GUI"]
margin_left = 10.2944
margin_top = 10.0188
margin_right = 136.294
margin_bottom = 25.0188
rect_rotation = 0.0547564
rect_scale = Vector2( 0.75, 0.75 )
max_value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )

[node name="Label" type="Label" parent="GUI/PlayerHealth"]
margin_left = -0.0114708
margin_top = -12.0
margin_right = 85.9885
margin_bottom = 8.00001
rect_scale = Vector2( 0.546749, 0.546749 )
custom_fonts/font = SubResource( 1 )
text = "PLAYER 1"
valign = 1

[node name="EnemyHealth" type="TextureProgress" parent="GUI"]
margin_left = 220.0
margin_top = 9.0
margin_right = 346.0
margin_bottom = 24.0
rect_rotation = 0.0547564
rect_scale = Vector2( 0.75, 0.75 )
max_value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
script = SubResource( 2 )

[node name="Label" type="Label" parent="GUI/EnemyHealth"]
margin_left = 78.0
margin_top = -12.0
margin_right = 164.0
margin_bottom = 8.0
rect_scale = Vector2( 0.546749, 0.546749 )
custom_fonts/font = SubResource( 1 )
text = "PLAYER 2"
valign = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../GUI")
anims/RESET = SubResource( 4 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 5 )

[connection signal="scene_changed" from="CurrentScene" to="." method="change_scene"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="on_animation_finished"]
